@@ -1,6 +1,6 @@
 ALPS/looper: multi-cluster quantum Monte Carlo algorithms for spin systems
 
-Copyright (C) 1997-2003 by Synge Todo <wistaria@comp-phys.org>
+Copyright (C) 1997-2004 by Synge Todo <wistaria@comp-phys.org>
 
 This software is published under the ALPS Application License; you can use,
 redistribute and/or modify this software under the terms of the license,
