@@ -1,6 +1,8 @@
 2004-01-16  Synge Todo  <wistaria@comp-phys.org>
 
 	* Fixed worker<QMC_WORKER>::work_done() function.
+
+	* Changed measurement type in qmc_impl.h.
 	
 2003-11-20  Synge Todo  <wistaria@comp-phys.org>
 
